<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/left_margin"
            android:background="@drawable/path_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_account_title"
            android:textColor="@color/color_white"
            android:textSize="@dimen/top_text_size" />

        <TextView
            android:id="@+id/text_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/left_margin"
            android:text="@string/personal_account_detail"
            android:textColor="@color/color_white"
            android:textSize="@dimen/right_text_size" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/personal_money_small"
        android:textColor="@color/color_white"
        android:textSize="@dimen/middle_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="220.0"
        android:textColor="@color/color_white"
        android:textSize="@dimen/large_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/personal_money_withdraw"
        android:textColor="@color/color_white"
        android:textSize="@dimen/middle_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/bottom_margin"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="2550.0"
        android:textColor="@color/color_white"
        android:textSize="@dimen/large_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/personal_money_freeze"
        android:textColor="@color/color_white"
        android:textSize="@dimen/middle_text_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_margin"
        android:layout_marginTop="@dimen/top_margin"
        android:text="20.0"
        android:textColor="@color/color_white"
        android:textSize="@dimen/large_text_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/top_margin"
        android:background="@color/color_white">

        <RelativeLayout
            android:id="@+id/layout_recharge"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/left_margin">

            <Button
                android:id="@+id/btn_credits"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:background="@drawable/ad_credits" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/btn_credits"
                android:text="@string/personal_operation_recharge"
                android:textSize="@dimen/middle_text_size" />

            <Button
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/path_right" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_card"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/layout_recharge"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/left_margin">

            <Button
                android:id="@+id/btn_card"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:background="@drawable/money2card" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/btn_card"
                android:text="@string/personal_operation_withdraw"
                android:textSize="@dimen/middle_text_size" />

            <Button
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/path_right" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/sum_money">

            <TextView
                android:id="@+id/text_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/text_total_detail"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="69555.0"
                android:textColor="@color/color_white"
                android:textSize="@dimen/middle_text_size" />

            <TextView
                android:id="@+id/text_total_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/bottom_margin"
                android:text="@string/personal_proceeds_total"
                android:textColor="@color/color_white"
                android:textSize="@dimen/middle_text_size" />
        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>