<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_blue"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="15dp"
            android:layout_height="20dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/left_margin"
            android:background="@drawable/path_left" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/personal_operation_withdraw"
            android:textColor="@color/color_white"
            android:textSize="@dimen/top_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/left_margin"
                android:text="@string/personal_available_balance"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/big_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/left_margin"
                android:text="￥900.00"
                android:textColor="@color/color_yellow"
                android:textSize="@dimen/large_text_size" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/bank_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/left_margin"
                android:src="@drawable/use_method" />

            <TextView
                android:id="@+id/bank_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/left_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_toRightOf="@+id/bank_icon"
                android:text="招商银行"
                android:textColor="@color/color_black"
                android:textSize="@dimen/big_text_size" />

            <TextView
                android:id="@+id/bank_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/bank_name"
                android:layout_marginLeft="@dimen/left_margin"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_toRightOf="@+id/bank_icon"
                android:text="尾号：4523"
                android:textColor="@color/color_gray"
                android:textSize="@dimen/small_text_size" />

            <Button
                android:layout_width="15dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/left_margin"
                android:background="@drawable/path_right" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/personal_withdraw_num"
            android:textColor="@color/color_black"
            android:textSize="@dimen/small_text_size" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginTop="@dimen/top_margin"
            android:text="￥300.00"
            android:background="null"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            android:textSize="@dimen/large_text_size" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginTop="20dp"
            android:text="@string/personal_withdraw_all"
            android:textColor="@color/color_yellow"
            android:textSize="@dimen/small_text_size" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/left_margin"
            android:layout_marginRight="@dimen/left_margin"
            android:text="@string/personal_operation_withdraw"
            android:textSize="@dimen/middle_text_size"
            android:layout_marginTop="30dp"
            android:textColor="@color/color_white"
            android:background="@drawable/rect_blue"/>
    </LinearLayout>

</LinearLayout>